Add preference for disable physical sim cards
Signed-off-by: darknius09 <darkniuslightness@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -208,6 +208,12 @@
             </intent-filter>
         </receiver>
 
+       <receiver android:name=".SettingsOnBoot">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <activity android:name=".SubSettings"
                   android:theme="@style/Theme.SubSettings" />
 
